<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    android:focusable="true"
    tools:context=".ui.fragments.user.editProfile.EditProfileFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="36dp">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/user_img"
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:layout_marginTop="48dp"
            android:src="@drawable/robot_img_small"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:layout_width="42dp"
            android:layout_height="42dp"
            android:background="@drawable/background_shimmer_circle"
            app:layout_constraintBottom_toBottomOf="@id/cam_img"
            app:layout_constraintEnd_toEndOf="@id/cam_img"
            app:layout_constraintStart_toStartOf="@id/cam_img"
            app:layout_constraintTop_toTopOf="@id/cam_img" />

        <ImageView
            android:id="@+id/cam_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_camera"
            app:layout_constraintBottom_toBottomOf="@id/user_img"
            app:layout_constraintEnd_toEndOf="@id/user_img" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="48dp"
            android:layout_marginEnd="16dp"
            app:errorEnabled="true"
            app:layout_constraintTop_toBottomOf="@id/user_img">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name"
                android:inputType="textPersonName"
                android:textColor="#000" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/current_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            app:errorEnabled="true"
            app:layout_constraintTop_toBottomOf="@id/name"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/current_password"
                android:inputType="textPassword"
                android:textColor="#000" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/new_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            app:errorEnabled="true"
            app:layout_constraintTop_toBottomOf="@id/current_password"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/new_password"
                android:inputType="textPassword"
                android:textColor="#000" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/edit_profile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="24dp"
            android:layout_marginRight="40dp"
            android:background="@drawable/background_login"
            android:gravity="center"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            android:text="@string/edit_profile"
            android:textAllCaps="false"
            android:textColor="#FFF"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/new_password" />

        <ProgressBar
            android:id="@+id/loading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:visibility="visible" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
