<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.user.highTemp.HighTempFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.cardview.widget.CardView
            android:id="@+id/warning_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            app:cardBackgroundColor="@color/light_black"
            app:cardCornerRadius="25dp"
            android:visibility="gone"
            tools:visibility="visible"
            app:contentPadding="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/warning_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/warning"
                    android:textColor="#EA2B6C"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/warning_message"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:gravity="center"
                    android:text="@string/you_cannot_receive_new_high_temperature_requests_because_thermalcontrol_is_turned_of_ndo_you_want_to_turn_it_on"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/warning_title" />

                <TextView
                    android:id="@+id/warning_turn_on"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="40dp"
                    android:layout_marginTop="24dp"
                    android:layout_marginRight="40dp"
                    android:background="@drawable/background_login"
                    android:gravity="center"
                    android:paddingTop="12dp"
                    android:paddingBottom="12dp"
                    android:text="@string/turn_it_on"
                    android:textColor="#FFF"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintTop_toBottomOf="@id/warning_message" />


            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/pick_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/background_login"
            android:backgroundTint="@color/shimmer"
            android:drawableStart="@drawable/ic_date"
            android:drawableEnd="@drawable/ic_down_arrow"
            android:drawablePadding="8dp"
            android:drawableTint="@color/colorSecondary"
            android:paddingStart="36dp"
            android:paddingTop="10dp"
            android:paddingEnd="36dp"
            android:paddingBottom="10dp"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/warning_card"
            tools:text="Day: 22/3/2021" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/high_temp_recycler"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/pick_date"
            tools:listitem="@layout/one_high_temp_item" />

        <com.facebook.shimmer.ShimmerFrameLayout
            android:id="@+id/high_temp_shimmer"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="8dp"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:shimmer_auto_start="true"
            tools:visibility="gone">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <include layout="@layout/one_high_temp_shimmer_item" />

                <include layout="@layout/one_high_temp_shimmer_item" />

                <include layout="@layout/one_high_temp_shimmer_item" />

                <include layout="@layout/one_high_temp_shimmer_item" />
            </LinearLayout>
        </com.facebook.shimmer.ShimmerFrameLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>