<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_item"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    app:cardBackgroundColor="@color/white"
    app:cardCornerRadius="25dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <GridLayout
            android:id="@+id/control_grid"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:columnCount="2"
            android:rowCount="2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.cardview.widget.CardView
                android:id="@+id/first_card"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:layout_marginStart="1dp"
                android:layout_marginEnd="8dp"
                app:cardBackgroundColor="@color/colorSecondary"
                app:cardCornerRadius="25dp"
                app:contentPadding="16dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center">

                    <ImageView
                        android:id="@+id/first_card_img"
                        android:layout_width="wrap_content"
                        android:layout_height="100dp"
                        android:layout_marginTop="8dp"
                        android:adjustViewBounds="true"
                        android:src="@drawable/ic_nav_swab"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:tint="@color/white" />

                    <TextView
                        android:id="@+id/first_card_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/covid_19_swab"
                        android:textColor="@color/white"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/first_card_img" />

                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/second_card"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="1dp"
                app:cardBackgroundColor="@color/colorSecondary"
                app:cardCornerRadius="25dp"
                app:contentPadding="16dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:paddingTop="16dp"
                    android:paddingBottom="16dp">

                    <ImageView
                        android:id="@+id/second_card_img"
                        android:layout_width="wrap_content"
                        android:layout_height="100dp"
                        android:layout_marginTop="8dp"
                        android:adjustViewBounds="true"
                        android:src="@drawable/ic_nav_control_robot"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:tint="@color/white" />

                    <TextView
                        android:id="@+id/second_card_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/robot_movement"
                        android:textColor="@color/white"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/second_card_img" />

                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/third_card"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:layout_marginStart="1dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="16dp"
                app:cardBackgroundColor="@color/colorSecondary"
                app:cardCornerRadius="25dp"
                app:contentPadding="16dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center">


                    <ImageView
                        android:id="@+id/third_card_img"
                        android:layout_width="wrap_content"
                        android:layout_height="100dp"
                        android:layout_marginTop="8dp"
                        android:adjustViewBounds="true"
                        android:src="@drawable/ic_mask"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:tint="@color/white" />

                    <TextView
                        android:id="@+id/third_card_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/detect_mask"
                        android:textColor="@color/white"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/third_card_img" />

                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/fourth_card"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="1dp"
                android:layout_marginBottom="16dp"
                app:cardBackgroundColor="@color/colorSecondary"
                app:cardCornerRadius="25dp"
                app:contentPadding="16dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:paddingTop="16dp"
                    android:paddingBottom="16dp">

                    <ImageView
                        android:id="@+id/fourth_card_img"
                        android:layout_width="wrap_content"
                        android:layout_height="100dp"
                        android:layout_marginTop="8dp"
                        android:adjustViewBounds="true"
                        android:src="@drawable/ic_thermal_cam"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:tint="@color/white" />

                    <TextView
                        android:id="@+id/fourth_card_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/thermal_cam"
                        android:textColor="@color/white"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/fourth_card_img" />

                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>

        </GridLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>